--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,20 @@
   <head>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="css/screen.css" type="text/css" />
+
+    <!-- Google analytics -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-33007254-1']);
+      _gaq.push(['_setDomainName', 'getbarkeep.org']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     {{ content }}
